# pvr.dvbviewer

./: CMakeLists.txt
debian/: changelog.in  control  copyright  rules
pvr.dvbviewer/: addon.xml
src/: DvbData.cpp  DvbData.h  TimeshiftBuffer.cpp  TimeshiftBuffer.h  client.cpp  client.h
